# cafe-backgrounds

./: .build.yml  .travis.yml  AUTHORS  COPYING.CCBY4.0  NEWS  README  autogen.sh  cafe-backgrounds.pot  configure.ac  makepot  meson.build  output_1efcb08a6b470e1a3bdc5de063f6de7ced7301ec  output_3992a672c74c3a3cc7c66311b7676ea56f8e1cd3  output_d900c6f951abba529684326aab3ca88869b193d9
.github/workflows/: main.yml
.tx/: config
abstract/: Makefile.am  cafe-abstract.xml.in.in  meson.build
desktop/: Makefile.am  cafe-desktop.xml.in.in  meson.build
nature/: Makefile.am  cafe-nature.xml.in.in  meson.build
po/: Makevars  POTFILES.in  POTFILES.skip  af.po  am.po  an.po  ar.po  as.po  ast.po  be.po  bg.po  bn.po  bn_IN.po  br.po  bs.po  ca.po  ca@valencia.po  cmn.po  crh.po  cs.po  cy.po  da.po  de.po  dz.po  el.po  en_AU.po  en_CA.po  en_GB.po  eo.po  es.po  es_AR.po  es_CO.po  es_MX.po  et.po  eu.po  fa.po  fi.po  fr.po  fr_CA.po  frp.po  (+67 more)
